starting migration to actix-web rust framework

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <title>Erreur 404</title>
 <pre class="western">
                _..--""-.                  .-""--.._
@@ -22,3 +25,4 @@
 
 Erreur 404 : Trompeur... Cette page n'existe plus ou a été déplacée.
 </pre>
+{% endblock %}
