--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	</head>
 	<body>
 		<h1>Chez Fitche</h1>
 		<nav>
 			<li><a id="accueil" href="index.php">Accueil</a></li>
 			<ul>
-				<?php
+                
+				<!--<?php
 					function buildNavFromFolder($root, $id, $backgroundColor)
 					{
 						if (count(scandir($root)) == 2)
@@ -49,22 +50,11 @@
 					}
 					$root = "Categories/";
 					buildNavFromFolder($root, 0, "clair");
-				?>
+				?>-->
 			</ul>
 		</nav>
 		<section id="blog">
-			<?php
-				if (empty($_GET["page"]))
-					include "pages/accueil.html";
-				elseif ($_GET["page"] === "test")
-					include 'pages/test.html';
-				elseif (!file_exists($_GET["page"]))
-					include 'pages/404.html';
-				else if (!strstr($_GET["page"], '../'))
-					include $_GET["page"];
-				else
-					include 'pages/404.html';
-			?>
+            {% block content %}{% endblock %}
 		</section>
 		<a id="topLink" href="javascript: void(0)" onClick="scrollUp();"><img id="imgUp" src="imgs/scrollUp.png" alt="Haut de page"/></a>
 		<script src="js/jquery-3.6.0.min.js" type="text/javascript" charset="utf-8"></script>
