--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <title>Accueil - Chez Fitche</title>
 <h2>Accueil</h2>
 
@@ -52,3 +55,4 @@ Fitche &lt;3 <br> <br> <br>
 		<li><a href="index.php?page=Categories/Boissons/Jus de gingembre.html">Jus de gingembre</a></li>
 		<li><a href="index.php?page=Categories/Boissons/Jus de tamarin.html">Jus de tamarin</a></li>
 	</ul>
+{% endblock %}
