lots of work on the migration to actix

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 		<nav>
 			<li><a id="accueil" href="index.php">Accueil</a></li>
 			<ul>
-                
+                {{self.get_nav()}}
 				<!--<?php
 					function buildNavFromFolder($root, $id, $backgroundColor)
 					{
